kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-app-ingress
spec:
  rules:
    - host: taskapp.local
      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: task-api
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-frontend
                port:
                  number: 80
